--- a/LoL_Sandbox.csproj
+++ b/LoL_Sandbox.csproj
@@ -436,95 +436,71 @@
     <Compile Include="Assets\PUN\PhotonChatApi\ChatUserStatus.cs" />
     <Compile Include="Assets\PUN\PhotonChatApi\IChatClientListener.cs" />
     <Compile Include="Assets\PUN\Plugins\WebSocket\WebSocket.cs" />
-    <Compile Include="Assets\Scripts\AttackIsCritical.cs" />
     <Compile Include="Assets\Scripts\Camera\CameraManager.cs" />
-    <Compile Include="Assets\Scripts\CC\CC.cs" />
-    <Compile Include="Assets\Scripts\CC\CC_Q.cs" />
-    <Compile Include="Assets\Scripts\CC\CC_Q_Buff.cs" />
-    <Compile Include="Assets\Scripts\CC\CC_Q_Debuff.cs" />
-    <Compile Include="Assets\Scripts\CC\CC_W.cs" />
-    <Compile Include="Assets\Scripts\CC\CC_W_Debuff.cs" />
-    <Compile Include="Assets\Scripts\CC\CCAbilityManager.cs" />
-    <Compile Include="Assets\Scripts\CC\CCBaseStats.cs" />
-    <Compile Include="Assets\Scripts\CC\CCBasicAttack.cs" />
-    <Compile Include="Assets\Scripts\CC\CCStats.cs" />
-    <Compile Include="Assets\Scripts\Entities\Abilities\Ability.cs" />
-    <Compile Include="Assets\Scripts\Entities\Abilities\AbilityAffectedUnitType.cs" />
-    <Compile Include="Assets\Scripts\Entities\Abilities\AbilityBuff.cs" />
-    <Compile Include="Assets\Scripts\Entities\Abilities\AbilityCategory.cs" />
-    <Compile Include="Assets\Scripts\Entities\Abilities\AbilityEffect\AbilityEffect.cs" />
-    <Compile Include="Assets\Scripts\Entities\Abilities\AbilityEffect\AreaOfEffect\AreaOfEffect.cs" />
-    <Compile Include="Assets\Scripts\Entities\Abilities\AbilityEffect\AreaOfEffect\AreaOfEffectCollider.cs" />
-    <Compile Include="Assets\Scripts\Entities\Abilities\AbilityEffect\AreaOfEffect\AreaOfEffectGround.cs" />
-    <Compile Include="Assets\Scripts\Entities\Abilities\AbilityEffect\Projectiles\Projectile.cs" />
-    <Compile Include="Assets\Scripts\Entities\Abilities\AbilityEffect\Projectiles\ProjectileDirectionTargeted.cs" />
-    <Compile Include="Assets\Scripts\Entities\Abilities\AbilityEffect\Projectiles\ProjectileMultipleTargets.cs" />
-    <Compile Include="Assets\Scripts\Entities\Abilities\AbilityEffect\Projectiles\ProjectileMultipleTargetsExpanding.cs" />
-    <Compile Include="Assets\Scripts\Entities\Abilities\AbilityEffect\Projectiles\ProjectileSingleTarget.cs" />
-    <Compile Include="Assets\Scripts\Entities\Abilities\AbilityEffect\Projectiles\ProjectileUnitTargeted.cs" />
-    <Compile Include="Assets\Scripts\Entities\Abilities\AbilityEffectType.cs" />
-    <Compile Include="Assets\Scripts\Entities\Abilities\AbilityTargeting\AutoTargeted\AutoTargeted.cs" />
-    <Compile Include="Assets\Scripts\Entities\Abilities\AbilityTargeting\AutoTargeted\AutoTargetedBlink.cs" />
-    <Compile Include="Assets\Scripts\Entities\Abilities\AbilityTargeting\DirectionTargeted\DirectionTargeted.cs" />
-    <Compile Include="Assets\Scripts\Entities\Abilities\AbilityTargeting\DirectionTargeted\DirectionTargetedDash.cs" />
-    <Compile Include="Assets\Scripts\Entities\Abilities\AbilityTargeting\DirectionTargeted\DirectionTargetedProjectile.cs" />
-    <Compile Include="Assets\Scripts\Entities\Abilities\AbilityTargeting\GroundTargeted\GroundTargeted.cs" />
-    <Compile Include="Assets\Scripts\Entities\Abilities\AbilityTargeting\GroundTargeted\GroundTargetedAoE.cs" />
-    <Compile Include="Assets\Scripts\Entities\Abilities\AbilityTargeting\GroundTargeted\GroundTargetedBlink.cs" />
-    <Compile Include="Assets\Scripts\Entities\Abilities\AbilityTargeting\PassiveTargeted\PassiveTargeted.cs" />
-    <Compile Include="Assets\Scripts\Entities\Abilities\AbilityTargeting\SelfTargeted\SelfTargeted.cs" />
-    <Compile Include="Assets\Scripts\Entities\Abilities\AbilityTargeting\UnitTargeted\UnitTargeted.cs" />
-    <Compile Include="Assets\Scripts\Entities\Abilities\AbilityTargeting\UnitTargeted\UnitTargetedAoE.cs" />
-    <Compile Include="Assets\Scripts\Entities\Abilities\AbilityTargeting\UnitTargeted\UnitTargetedProjectile.cs" />
-    <Compile Include="Assets\Scripts\Entities\Abilities\AbilityType.cs" />
-    <Compile Include="Assets\Scripts\Entities\Abilities\CharacterAbilities\_Character\Recall.cs" />
-    <Compile Include="Assets\Scripts\Entities\Abilities\CharacterAbilities\_Character\Recall_Buff.cs" />
-    <Compile Include="Assets\Scripts\Entities\Abilities\CharacterAbilities\Ezreal\Ezreal_E.cs" />
-    <Compile Include="Assets\Scripts\Entities\Abilities\CharacterAbilities\Ezreal\Ezreal_P.cs" />
-    <Compile Include="Assets\Scripts\Entities\Abilities\CharacterAbilities\Ezreal\Ezreal_P_Buff.cs" />
-    <Compile Include="Assets\Scripts\Entities\Abilities\CharacterAbilities\Ezreal\Ezreal_Q.cs" />
-    <Compile Include="Assets\Scripts\Entities\Abilities\CharacterAbilities\Ezreal\Ezreal_R.cs" />
-    <Compile Include="Assets\Scripts\Entities\Abilities\CharacterAbilities\Ezreal\Ezreal_W.cs" />
-    <Compile Include="Assets\Scripts\Entities\Abilities\CharacterAbilities\Ezreal\Ezreal_W_Buff.cs" />
-    <Compile Include="Assets\Scripts\Entities\Abilities\CharacterAbilities\Lucian\Lucian_E.cs" />
-    <Compile Include="Assets\Scripts\Entities\Abilities\CharacterAbilities\Lucian\Lucian_P.cs" />
-    <Compile Include="Assets\Scripts\Entities\Abilities\CharacterAbilities\Lucian\Lucian_P_Buff.cs" />
-    <Compile Include="Assets\Scripts\Entities\Abilities\CharacterAbilities\Lucian\Lucian_Q.cs" />
-    <Compile Include="Assets\Scripts\Entities\Abilities\CharacterAbilities\Lucian\Lucian_R.cs" />
-    <Compile Include="Assets\Scripts\Entities\Abilities\CharacterAbilities\Lucian\Lucian_W.cs" />
-    <Compile Include="Assets\Scripts\Entities\Abilities\CharacterAbilities\Lucian\Lucian_W_Buff.cs" />
-    <Compile Include="Assets\Scripts\Entities\Abilities\CharacterAbilities\Lucian\Lucian_W_Debuff.cs" />
-    <Compile Include="Assets\Scripts\Entities\Abilities\CharacterAbilities\MissFortune\MissFortune_E.cs" />
-    <Compile Include="Assets\Scripts\Entities\Abilities\CharacterAbilities\MissFortune\MissFortune_E_Debuff.cs" />
-    <Compile Include="Assets\Scripts\Entities\Abilities\CharacterAbilities\MissFortune\MissFortune_P.cs" />
-    <Compile Include="Assets\Scripts\Entities\Abilities\CharacterAbilities\MissFortune\MissFortune_P_Debuff.cs" />
-    <Compile Include="Assets\Scripts\Entities\Abilities\CharacterAbilities\MissFortune\MissFortune_Q.cs" />
-    <Compile Include="Assets\Scripts\Entities\Abilities\CharacterAbilities\MissFortune\MissFortune_R.cs" />
-    <Compile Include="Assets\Scripts\Entities\Abilities\CharacterAbilities\MissFortune\MissFortune_R_Buff.cs" />
-    <Compile Include="Assets\Scripts\Entities\Abilities\CharacterAbilities\MissFortune\MissFortune_W.cs" />
-    <Compile Include="Assets\Scripts\Entities\Abilities\CharacterAbilities\MissFortune\MissFortune_W_Buff.cs" />
-    <Compile Include="Assets\Scripts\Entities\Abilities\CharacterAbilities\MissFortune\MissFortune_W_PassiveBuff.cs" />
-    <Compile Include="Assets\Scripts\Entities\Abilities\DamageType.cs" />
-    <Compile Include="Assets\Scripts\Entities\Abilities\OfflineAbilities\DestroyAllDummies.cs" />
-    <Compile Include="Assets\Scripts\Entities\Abilities\OfflineAbilities\SpawnAllyDummy.cs" />
-    <Compile Include="Assets\Scripts\Entities\Abilities\OfflineAbilities\SpawnDummy.cs" />
-    <Compile Include="Assets\Scripts\Entities\Abilities\OfflineAbilities\SpawnEnemyDummy.cs" />
-    <Compile Include="Assets\Scripts\Entities\Abilities\SummonerAbilities\Flash.cs" />
-    <Compile Include="Assets\Scripts\Entities\Abilities\SummonerAbilities\Heal.cs" />
-    <Compile Include="Assets\Scripts\Entities\Abilities\SummonerAbilities\Heal_Buff.cs" />
-    <Compile Include="Assets\Scripts\Entities\Abilities\SummonerAbilities\Heal_Debuff.cs" />
-    <Compile Include="Assets\Scripts\Entities\Abilities\SummonerAbilities\Teleport.cs" />
-    <Compile Include="Assets\Scripts\Entities\Buffs\Buff.cs" />
-    <Compile Include="Assets\Scripts\Entities\Buffs\BuffUpdatingWithDelay.cs" />
-    <Compile Include="Assets\Scripts\Entities\Character\CharacterAbilityEffectsManager.cs" />
+    <Compile Include="Assets\Scripts\Entities\Buff.cs" />
+    <Compile Include="Assets\Scripts\Entities\Character\Abilities\Ability.cs" />
+    <Compile Include="Assets\Scripts\Entities\Character\Abilities\AbilityAffectedUnitType.cs" />
+    <Compile Include="Assets\Scripts\Entities\Character\Abilities\AbilityBuff.cs" />
+    <Compile Include="Assets\Scripts\Entities\Character\Abilities\AbilityCategory.cs" />
+    <Compile Include="Assets\Scripts\Entities\Character\Abilities\AbilityEffect\AbilityEffect.cs" />
+    <Compile Include="Assets\Scripts\Entities\Character\Abilities\AbilityEffect\AreaOfEffect\AreaOfEffect.cs" />
+    <Compile Include="Assets\Scripts\Entities\Character\Abilities\AbilityEffect\AreaOfEffect\AreaOfEffectCollider.cs" />
+    <Compile Include="Assets\Scripts\Entities\Character\Abilities\AbilityEffect\Projectiles\Projectile.cs" />
+    <Compile Include="Assets\Scripts\Entities\Character\Abilities\AbilityEffect\Projectiles\ProjectileDirectionTargeted.cs" />
+    <Compile Include="Assets\Scripts\Entities\Character\Abilities\AbilityEffect\Projectiles\ProjectileMultipleTargets.cs" />
+    <Compile Include="Assets\Scripts\Entities\Character\Abilities\AbilityEffect\Projectiles\ProjectileSingleTarget.cs" />
+    <Compile Include="Assets\Scripts\Entities\Character\Abilities\AbilityEffect\Projectiles\ProjectileUnitTargeted.cs" />
+    <Compile Include="Assets\Scripts\Entities\Character\Abilities\AbilityEffectType.cs" />
+    <Compile Include="Assets\Scripts\Entities\Character\Abilities\AbilityTargeting\AutoTargeted\AutoTargeted.cs" />
+    <Compile Include="Assets\Scripts\Entities\Character\Abilities\AbilityTargeting\AutoTargeted\AutoTargetedBlink.cs" />
+    <Compile Include="Assets\Scripts\Entities\Character\Abilities\AbilityTargeting\DirectionTargeted\DirectionTargeted.cs" />
+    <Compile Include="Assets\Scripts\Entities\Character\Abilities\AbilityTargeting\DirectionTargeted\DirectionTargetedDash.cs" />
+    <Compile Include="Assets\Scripts\Entities\Character\Abilities\AbilityTargeting\DirectionTargeted\DirectionTargetedProjectile.cs" />
+    <Compile Include="Assets\Scripts\Entities\Character\Abilities\AbilityTargeting\GroundTargeted\GroundTargeted.cs" />
+    <Compile Include="Assets\Scripts\Entities\Character\Abilities\AbilityTargeting\GroundTargeted\GroundTargetedBlink.cs" />
+    <Compile Include="Assets\Scripts\Entities\Character\Abilities\AbilityTargeting\PassiveTargeted\PassiveTargeted.cs" />
+    <Compile Include="Assets\Scripts\Entities\Character\Abilities\AbilityTargeting\SelfTargeted\SelfTargeted.cs" />
+    <Compile Include="Assets\Scripts\Entities\Character\Abilities\AbilityTargeting\UnitTargeted\UnitTargeted.cs" />
+    <Compile Include="Assets\Scripts\Entities\Character\Abilities\AbilityType.cs" />
+    <Compile Include="Assets\Scripts\Entities\Character\Abilities\CharacterAbilities\_Character\Recall.cs" />
+    <Compile Include="Assets\Scripts\Entities\Character\Abilities\CharacterAbilities\_Character\Recall_Buff.cs" />
+    <Compile Include="Assets\Scripts\Entities\Character\Abilities\CharacterAbilities\Ezreal\Ezreal_E.cs" />
+    <Compile Include="Assets\Scripts\Entities\Character\Abilities\CharacterAbilities\Ezreal\Ezreal_P.cs" />
+    <Compile Include="Assets\Scripts\Entities\Character\Abilities\CharacterAbilities\Ezreal\Ezreal_P_Buff.cs" />
+    <Compile Include="Assets\Scripts\Entities\Character\Abilities\CharacterAbilities\Ezreal\Ezreal_Q.cs" />
+    <Compile Include="Assets\Scripts\Entities\Character\Abilities\CharacterAbilities\Ezreal\Ezreal_R.cs" />
+    <Compile Include="Assets\Scripts\Entities\Character\Abilities\CharacterAbilities\Ezreal\Ezreal_W.cs" />
+    <Compile Include="Assets\Scripts\Entities\Character\Abilities\CharacterAbilities\Ezreal\Ezreal_W_Buff.cs" />
+    <Compile Include="Assets\Scripts\Entities\Character\Abilities\CharacterAbilities\Lucian\Lucian_E.cs" />
+    <Compile Include="Assets\Scripts\Entities\Character\Abilities\CharacterAbilities\Lucian\Lucian_P.cs" />
+    <Compile Include="Assets\Scripts\Entities\Character\Abilities\CharacterAbilities\Lucian\Lucian_P_Buff.cs" />
+    <Compile Include="Assets\Scripts\Entities\Character\Abilities\CharacterAbilities\Lucian\Lucian_Q.cs" />
+    <Compile Include="Assets\Scripts\Entities\Character\Abilities\CharacterAbilities\Lucian\Lucian_R.cs" />
+    <Compile Include="Assets\Scripts\Entities\Character\Abilities\CharacterAbilities\Lucian\Lucian_W.cs" />
+    <Compile Include="Assets\Scripts\Entities\Character\Abilities\CharacterAbilities\Lucian\Lucian_W_Buff.cs" />
+    <Compile Include="Assets\Scripts\Entities\Character\Abilities\CharacterAbilities\Lucian\Lucian_W_Debuff.cs" />
+    <Compile Include="Assets\Scripts\Entities\Character\Abilities\CharacterAbilities\MissFortune\MissFortune_E.cs" />
+    <Compile Include="Assets\Scripts\Entities\Character\Abilities\CharacterAbilities\MissFortune\MissFortune_P.cs" />
+    <Compile Include="Assets\Scripts\Entities\Character\Abilities\CharacterAbilities\MissFortune\MissFortune_P_Buff.cs" />
+    <Compile Include="Assets\Scripts\Entities\Character\Abilities\CharacterAbilities\MissFortune\MissFortune_Q.cs" />
+    <Compile Include="Assets\Scripts\Entities\Character\Abilities\CharacterAbilities\MissFortune\MissFortune_R.cs" />
+    <Compile Include="Assets\Scripts\Entities\Character\Abilities\CharacterAbilities\MissFortune\MissFortune_W.cs" />
+    <Compile Include="Assets\Scripts\Entities\Character\Abilities\DamageType.cs" />
+    <Compile Include="Assets\Scripts\Entities\Character\Abilities\OfflineAbilities\DestroyAllDummies.cs" />
+    <Compile Include="Assets\Scripts\Entities\Character\Abilities\OfflineAbilities\SpawnAllyDummy.cs" />
+    <Compile Include="Assets\Scripts\Entities\Character\Abilities\OfflineAbilities\SpawnDummy.cs" />
+    <Compile Include="Assets\Scripts\Entities\Character\Abilities\OfflineAbilities\SpawnEnemyDummy.cs" />
+    <Compile Include="Assets\Scripts\Entities\Character\Abilities\SummonerAbilities\Flash.cs" />
+    <Compile Include="Assets\Scripts\Entities\Character\Abilities\SummonerAbilities\Heal.cs" />
+    <Compile Include="Assets\Scripts\Entities\Character\Abilities\SummonerAbilities\Heal_Buff.cs" />
+    <Compile Include="Assets\Scripts\Entities\Character\Abilities\SummonerAbilities\Heal_Debuff.cs" />
+    <Compile Include="Assets\Scripts\Entities\Character\Abilities\SummonerAbilities\Teleport.cs" />
     <Compile Include="Assets\Scripts\Entities\Character\CharacterAbilityManager.cs" />
-    <Compile Include="Assets\Scripts\Entities\Character\CharacterAutoAttack.cs" />
     <Compile Include="Assets\Scripts\Entities\Character\CharacterBufferedAbilityManager.cs" />
     <Compile Include="Assets\Scripts\Entities\Character\CharacterInput.cs" />
     <Compile Include="Assets\Scripts\Entities\Character\CharacterLevelManager.cs" />
     <Compile Include="Assets\Scripts\Entities\Character\CharacterMouseManager.cs" />
     <Compile Include="Assets\Scripts\Entities\Character\CharacterMovement.cs" />
-    <Compile Include="Assets\Scripts\Entities\Character\CharacterOnHitEffectsManager.cs" />
     <Compile Include="Assets\Scripts\Entities\Character\CharacterOrientation.cs" />
     <Compile Include="Assets\Scripts\Entities\Character\Characters\_Character\Character.cs" />
     <Compile Include="Assets\Scripts\Entities\Character\Characters\_Character\CharacterBaseStats.cs" />
@@ -546,6 +522,7 @@
     <Compile Include="Assets\Scripts\Entities\Character\Characters\MissFortune\MissFortuneBasicAttack.cs" />
     <Compile Include="Assets\Scripts\Entities\Character\Characters\MissFortune\MissFortuneStats.cs" />
     <Compile Include="Assets\Scripts\Entities\Character\CharacterStatsManager.cs" />
+    <Compile Include="Assets\Scripts\Entities\Character\CharacterStatusManager.cs" />
     <Compile Include="Assets\Scripts\Entities\CrowdControlEffects.cs" />
     <Compile Include="Assets\Scripts\Entities\Dummy\Dummy.cs" />
     <Compile Include="Assets\Scripts\Entities\Dummy\DummyBaseStats.cs" />
@@ -557,8 +534,6 @@
     <Compile Include="Assets\Scripts\Entities\EntityBasicAttackCycle.cs" />
     <Compile Include="Assets\Scripts\Entities\EntityBuffManager.cs" />
     <Compile Include="Assets\Scripts\Entities\EntityStats.cs" />
-    <Compile Include="Assets\Scripts\Entities\EntityStatusManager.cs" />
-    <Compile Include="Assets\Scripts\Entities\EntityStatusMovementManager.cs" />
     <Compile Include="Assets\Scripts\Entities\EntityTeam.cs" />
     <Compile Include="Assets\Scripts\Entities\EntityType.cs" />
     <Compile Include="Assets\Scripts\Entities\Minion\MinionStats.cs" />
