--- a/.gitignore
+++ b/.gitignore
@@ -103,6 +103,6 @@ typings/
 # next.js build output
 .next
 
-.idea/.idea.LoL_Sandbox/.idea/contentModel.xml
-.idea/.idea.LoL_Sandbox/.idea/contentModel.xml
-.idea/.idea.LoL_Sandbox/riderModule.iml
+.idea/.idea.UbisoftContest/.idea/contentModel.xml
+.idea/.idea.UbisoftContest/.idea/contentModel.xml
+.idea/.idea.UbisoftContest/riderModule.iml
